--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-Flask
-gunicorn
-Flask-Babel
-psycopg2-binary
-Flask-Login
-Flask-WTF
-Werkzeug
-
+babel==2.17.0
 blinker==1.9.0
 click==8.2.1
 Flask==3.1.1
+flask-babel==4.0.0
 Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 psycopg2-binary==2.9.10
+python-dotenv==1.1.1
+pytz==2025.2
+SQLAlchemy==2.0.41
+typing_extensions==4.14.0
 Werkzeug==3.1.3
 WTForms==3.2.1
